@@ -2,6 +2,11 @@ Fixes and Enhancements since Version 0.5 alpha 2
 
  Changed, Enhanced, or Newly Deprecated Features
 
+ - Enhanced 'fmtparse' and 'peak.model' to allow using types as syntax rules
+   for parsing, including abstract types.  An abstract type's syntax is the
+   union (using 'fmtparse.Alternatives') of the syntaxes of its subclasses
+   (as specified by 'mdl_subclassNames').
+
  - Added 'IMainLoop.setExitCode()' and 'IMainLoop.childForked()' methods, to
    allow reactor-driven components to control the mainloop's exit code.
 
